--- a/css/general.css
+++ b/css/general.css
@@ -9,6 +9,7 @@ body {
 
 header {
     background-image: url(../img/turtle-bg.jpg);
+    background-color: #01578d;
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
@@ -18,6 +19,7 @@ header {
     color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     text-align: center;
     text-shadow: 0 0 8px black;
@@ -25,23 +27,23 @@ header {
 
 h1 {
     font-size: 3rem;
-    margin: 1vw;
+    margin: 2vw;
 }
 
 nav {
-    display: flex;
-    justify-content: center;
+    margin-top: 90px;
+    width: 300px;
 }
 
 .menu {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    width: 20vw;
 }
 
 .menu-item { 
     list-style: none; 
     margin: 1vw;
 }
+
 .menu-item a { color: white; }
