--- a/css/general.css
+++ b/css/general.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Cabeçalho */
 header {
     background-image: url(../img/turtle-bg.jpg);
     background-color: #01578d;
@@ -30,20 +31,18 @@ h1 {
     margin: 2vw;
 }
 
+/* Menu de navegação */
 nav {
     margin-top: 90px;
     width: 300px;
 }
-
 .menu {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
 }
-
 .menu-item { 
     list-style: none; 
     margin: 1vw;
 }
-
 .menu-item a { color: white; }
