--- a/css/general.css
+++ b/css/general.css
@@ -8,9 +8,21 @@ body {
 }
 
 /* Cabeçalho */
+.gradient {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), #001a3f);
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
 header {
     background-image: url(../img/turtle-bg.jpg);
-    background-color: #01578d;
+    background-color: #001a3f;
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
@@ -18,11 +30,6 @@ header {
     height: 500px;
 
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
     text-shadow: 0 0 8px black;
 }
 
@@ -54,6 +61,12 @@ nav {
     margin: 1vw;
 }
 
+.menu-item a:hover{
+    font-size: 1.2rem;
+    transition: 0.3s;
+    color: rgb(165, 165, 165);
+}
+
 a { color: white; }
 
 /* Seção sobre a poluição dos oceanos */
@@ -74,9 +87,9 @@ main p {
     font-size: 1.5rem;
 }
 
-figure { margin: 6vw 3vw 3vw 3vw; }
+figure { margin-top: 6vw; margin: 3vw; }
+cite p { text-align: left; font-size: 1rem; margin: 0.25vw;}
 figure a { color: blue; }
-
 
 iframe { width: 100%; }
 
@@ -104,6 +117,15 @@ input {
     padding: 12px;
     border-radius: 20px;
     border: none;
+}
+
+label[for="donation-amount"], #donation-amount { text-align: center; }
+    
+#donation-amount{
+    width: 60%;
+    padding: 24px;
+    font-size: 1.25rem;
+    align-self: center;
 }
 
 textarea { max-width: 100%; }
@@ -144,12 +166,9 @@ address p {
 
 /* Adaptando para telas maiores */
 @media only screen and (min-width: 600px) {
-    div.container{
+    .container{
         background-color: #001a3f;
         padding: 0 7.5vw;
-    }
-
-    main {
         display: flex; 
         flex-direction: column;
         flex-wrap: nowrap;
@@ -173,22 +192,14 @@ address p {
         width: 60%;
         text-align: left;
     }
-
-    label[for="donation-amount"] { text-align: center; }
     
-    #donation-amount{
-        width: 20%;
-        padding: 24px;
-        font-size: 1.25rem;
-        align-self: center;
-    }
+    #donation-amount{ width: 20%; }
 
     footer {
         border-radius: 0;
         margin: 0;
         background-color: white;
-        color: black;
     }
 
-    address a { color: black; }
+    address a, footer { color: black; }
 }
