--- a/css/general.css
+++ b/css/general.css
@@ -72,7 +72,7 @@ nav {
 
 .menu-item a { color: white; }
 
-/* Seção sobre a poluição dos oceanos */
+/* Conteúdo principal */
 .container{
     background-color: #001a3f;
     padding: 0 2.5vw 5vw;
@@ -89,9 +89,7 @@ section {
     padding: 3vw;
 }
 
-main {
-    text-align: justify;
-}
+main { text-align: justify; }
 
 h2 {
     text-align: center;
@@ -101,9 +99,16 @@ h2 {
 
 main p {
     margin: 2vw;
+    line-height: 1.5rem;
 }
 
-.cite-text { text-align: left; font-size: 1rem; margin: 0.25vw;}
+.author-reference { 
+    text-align: left; 
+    font-size: 1rem; 
+    margin: 0.25vw;
+    font-style: italic;
+}
+
 iframe { width: 100%; }
 
 /* Formulário */
