--- a/css/general.css
+++ b/css/general.css
@@ -38,22 +38,14 @@ h1 {
     margin: 2vw;
 }
 
-h1, h2 { font-family: "Ubuntu", sans-serif; }
+h1, h2, h3 { font-family: "Ubuntu", sans-serif; }
 
-header p, nav{
-    width: 95vw;
-    max-width: 300px;
-}
+header p { width: 90vw; max-width: 400px; }
+nav, .menu { width: 90vw; max-width: 500px; }
 
 /* Menu de navegação */
-nav {
-    margin-top: 90px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
-}
-
 .menu {
+    margin-top: 120px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -62,6 +54,7 @@ nav {
 .menu-item { 
     list-style: none; 
     margin: 1vw;
+    text-align: center;
 }
 
 .menu-item a:hover{
@@ -89,7 +82,7 @@ section {
     padding: 3vw;
 }
 
-main { text-align: justify; }
+main { text-align: justify; width: 100vw; }
 
 h2 {
     text-align: center;
@@ -98,7 +91,8 @@ h2 {
 }
 
 main p {
-    margin: 2vw;
+    margin: 1vw;
+    margin-bottom: 3vw;
     line-height: 1.5rem;
 }
 
@@ -112,10 +106,7 @@ main p {
 iframe { width: 100%; }
 
 /* Formulário */
-#donations {
-    border-radius: 20px;
-    margin: 5vw 0;
-}
+#donations { border-radius: 20px; }
 
 #donations p {
     font-size: 1rem;
@@ -164,9 +155,13 @@ textarea, input { background-color: rgb(231, 231, 231); }
 
 /* Rodapé */
 footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    row-gap: 12px;
     text-align: center;
-    padding: 5vw;
-    padding-bottom: 2.5vw;
+    padding: 10vw 0 5vw;
+    height: 100px;
 }
 
 address p {
@@ -178,7 +173,8 @@ address p {
 @media only screen and (min-width: 600px) {
     .container { padding: 0 7.5vw; }
 
-    main p { font-size: 1.5rem; }
+    main { width: auto; }
+    main p { font-size: 1.5rem; line-height: 2rem; }
 
     section { 
         text-align: center; 
@@ -205,6 +201,6 @@ address p {
     }
 
     footer {
-        padding: 2vw;
+        padding: 2vw 0 1vw;
     }
 }
