--- a/css/general.css
+++ b/css/general.css
@@ -68,6 +68,7 @@ nav, .menu { width: 90vw; max-width: 500px; }
 /* Conteúdo principal */
 .container{
     background-color: #001a3f;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), #000a18);
     padding: 0 2.5vw 5vw;
     display: flex; 
     flex-direction: column;
